--- a/reading.css
+++ b/reading.css
@@ -1,6 +1,4 @@
-
 body {
- // min-height: 100vh;
   background: black;
   color: white;
   display: flex;
@@ -38,7 +36,7 @@ body {
   }
 }
 
-.contentnaier{
+.contentnaier {
   position: absolute;
   top: 5%;
   left: 10%;
@@ -48,12 +46,12 @@ body {
   grid-template-rows: 10% 90%;
   grid-template-areas:
     "SYNTH"
-    "DTT"
+    "DTT";
   pointer-events: auto;
   z-index: 1;
 }
 
-.container{
+.container {
   position: absolute;
   top: 5%;
   left: 10%;
@@ -63,60 +61,91 @@ body {
   grid-template-areas:
     "SYNTH  NEON "
     "DTT  . "
-    "INF  . " ;
-    pointer-events: auto;
-    z-index: 1;
+    "INF  . ";
+  pointer-events: auto;
+  z-index: 1;
 }
 
-.box{
-position: absolute;
-top: 20%;
-left: 20%;
-display: grid;
-grid-template:
- "TITLE"
- "CONTENT";
-}
-#title{
- grid-area: TITLE;
-}
-#content{
- grid-area: CONTENT;
+.box {
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  display: grid;
+  grid-template:
+    "TITLE"
+    "CONTENT";
 }
 
-.content{
+#title {
+  grid-area: TITLE;
+}
+
+#content {
+  grid-area: CONTENT;
+}
+
+/* Normal devices */
+.content {
   grid-area: DTT;
   font-size: 1.4vw;
 }
 
-.header{ font-size: 1.7vw; }
-.neon{
+.header {
+  font-size: 1.7vw;
+}
+
+/* Mobile devices */
+@media (max-width: 600px) {
+  .content {
+    font-size: 16px; /* Adjust the minimum font size for mobile devices */
+  }
+
+  .header {
+    font-size: 18px; /* Adjust the minimum font size for mobile devices */
+  }
+}
+
+.neon {
   grid-area: SYNTH;
   font-family: 'Monoton', cursive;
-  font-size:5vW;
+  font-size: 5vW;
   color: #FFD5FF;
   font-weight: 400;
   letter-spacing: 8px;
-  text-shadow: 1px 0px 4px #FFD5FF, 2px 0px 4px #FFD5FF, 3px 0px 4px #FFD5FF, 2px 0px 3px #D42CCA, 2px 3px 15px #D42CCA, 2px 0px 15px, 5px 0px 125px, 20px 0vw 200px #D42CCA,40px 0vw 200px #D42CCA;
+  text-shadow: 1px 0px 4px #FFD5FF, 2px 0px 4px #FFD5FF, 3px 0px 4px #FFD5FF, 2px 0px 3px #D42CCA, 2px 3px 15px #D42CCA, 2px 0px 15px, 5px 0px 125px, 20px 0vw 200px #D42CCA, 40px 0vw 200px #D42CCA;
 }
 
-.flicker-slow{
+.flicker-slow {
   animation: flicker 3s linear infinite;
 }
 
-.flicker-fast{
+.flicker-fast {
   animation: flicker 1s linear infinite;
 }
 
 @keyframes flicker {
-	0%, 19.999%, 22%, 62.999%, 64%, 64.999%, 70%, 100% {
-		//text-shadow: none;
+
+  0%,
+  19.999%,
+  22%,
+  62.999%,
+  64%,
+  64.999%,
+  70%,
+  100% {
+    //text-shadow: none;
     opacity: .99;
 
-	}
-	20%, 21.999%, 63%, 63.999%, 65%, 69.999% {
-		opacity: 0.4;
-	}
+  }
+
+  20%,
+  21.999%,
+  63%,
+  63.999%,
+  65%,
+  69.999% {
+    opacity: 0.4;
+  }
 }
 
 .numanuma {
@@ -133,13 +162,13 @@ grid-template:
   opacity: 80%
 }
 
-.datetime{
+.datetime {
   grid-area: DTT;
   font-size: 2vw;
   font-family: 'Audiowide';
 }
 
-.infobubble{
+.infobubble {
   grid-area: INF;
   font-size: 2vw;
   font-family: 'Audiowide';
