--- a/landingstyle.css
+++ b/landingstyle.css
@@ -55,11 +55,51 @@ body {
 .neon{
   grid-area: SYNTH;
   font-family: 'Monoton', cursive;
-  font-size:5vW;
   color: #FFD5FF;
   font-weight: 400;
   letter-spacing: 8px;
   text-shadow: 1px 0px 4px #FFD5FF, 2px 0px 4px #FFD5FF, 3px 0px 4px #FFD5FF, 2px 0px 3px #D42CCA, 2px 3px 15px #D42CCA, 2px 0px 15px, 5px 0px 125px, 20px 0vw 200px #D42CCA,40px 0vw 200px #D42CCA;
+}
+/* Mobile Device */
+@media only screen and (max-width: 767px) {
+  .neon {
+    font-size: 32px;
+  }
+
+  .datetime{
+    font-size: 22px;
+  }
+  .infobubble {
+    font-size: 22px;
+  }
+}
+
+/* Medium Device */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .neon {
+    font-size: 42px;
+  }
+
+  .datetime{
+    font-size: 22px;
+  }
+  .infobubble {
+    font-size: 22px;
+  }
+}
+
+/* Large Device */
+@media only screen and (min-width: 1024px) {
+  .neon {
+    font-size:5vW;
+  }
+
+  .datetime{
+    font-size: 2.2vw;
+  }
+  .infobubble {
+    font-size: 2.2vw;
+  }
 }
 
 .flicker-slow{
@@ -97,13 +137,11 @@ body {
 
 .datetime{
   grid-area: DTT;
-  font-size: 2vw;
   font-family: 'Audiowide';
 }
 
 .infobubble{
   grid-area: INF;
-  font-size: 2vw;
   font-family: 'Audiowide';
   font-weight: 50;
   filter: drop-shadow(0 0 22px #ff00aa);
