--- a/landingstyle.css
+++ b/landingstyle.css
@@ -12,7 +12,21 @@ body {
   height: 100vh;
   width: 100vw;
   perspective: 800px;
-  background-image: linear-gradient(to bottom, #0f0209, #23061d, #330531, #3e024b, #41056a, #520578, #640385, #770092, #9b0089, #b8007e, #ce1173, #e03168);
+  background-image: linear-gradient(
+    to bottom,
+    #0f0209,
+    #23061d,
+    #330531,
+    #3e024b,
+    #41056a,
+    #520578,
+    #640385,
+    #770092,
+    #9b0089,
+    #b8007e,
+    #ce1173,
+    #e03168
+  );
   z-index: -1;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -20,9 +34,12 @@ body {
 
 #background-scroller {
   background-size: 60px 60px;
-  background-image:
-    linear-gradient(to right, rgba(255, 255, 255, .15) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(255, 255, 255, .2) 1px, transparent 1px);
+  background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.15) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 1px, transparent 1px);
   height: inherit;
   transform: rotateX(40deg);
   transform-origin: top center;
@@ -37,7 +54,7 @@ body {
   }
 }
 
-.container{
+.container {
   position: absolute;
   top: 10%;
   left: 15%;
@@ -47,26 +64,105 @@ body {
   grid-template-areas:
     "SYNTH  NEON "
     "DTT  . "
-    "INF  . " ;
-    pointer-events: auto;
-    z-index: 1;
+    "INF  . ";
+  pointer-events: auto;
+  z-index: 1;
 }
 
-.neon{
+.neon {
   grid-area: SYNTH;
-  font-family: 'Monoton', cursive;
-  color: #FFD5FF;
+  font-family: "Monoton", cursive;
+  color: #ffd5ff;
   font-weight: 400;
   letter-spacing: 8px;
-  text-shadow: 1px 0px 4px #FFD5FF, 2px 0px 4px #FFD5FF, 3px 0px 4px #FFD5FF, 2px 0px 3px #D42CCA, 2px 3px 15px #D42CCA, 2px 0px 15px, 5px 0px 125px, 20px 0vw 200px #D42CCA,40px 0vw 200px #D42CCA;
+  text-shadow: 1px 0px 4px #ffd5ff, 2px 0px 4px #ffd5ff, 3px 0px 4px #ffd5ff,
+    2px 0px 3px #d42cca, 2px 3px 15px #d42cca, 2px 0px 15px, 5px 0px 125px,
+    20px 0vw 200px #d42cca, 40px 0vw 200px #d42cca;
+}
+
+.flicker-slow {
+  animation: flicker 3s linear infinite;
+}
+
+.flicker-fast {
+  animation: flicker 1s linear infinite;
+}
+
+@keyframes flicker {
+  0%,
+  19.999%,
+  22%,
+  62.999%,
+  64%,
+  64.999%,
+  70%,
+  100% {
+    opacity: 0.99;
+  }
+  20%,
+  21.999%,
+  63%,
+  63.999%,
+  65%,
+  69.999% {
+    opacity: 0.4;
+  }
+}
+
+.numanuma {
+  grid-area: NEON;
+  z-index: -1;
+  font-family: "Mr Dafoe";
+  font-size: 12vw;
+  font-weight: 100;
+  color: #aa00f0;
+  filter: drop-shadow(0 0 22px #ffffff);
+  line-height: 1;
+  transform: rotateZ(-10deg) translate(-200%, -50%);
+  transform-origin: center center;
+  opacity: 80%;
+}
+
+.datetime {
+  grid-area: DTT;
+  font-family: "Audiowide";
+}
+
+.infobubble {
+  grid-area: INF;
+  font-family: "Audiowide";
+  font-weight: 50;
+  filter: drop-shadow(0 0 22px #ff00aa);
+  opacity: 80%;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+footer {
+  width: 95%;
+  position: absolute;
+  -webkit-position: absolute; /* Added -webkit prefix */
+  bottom: 0%;
+  left: 5%;
+  clear: both;
+}
+
+footer #gif {
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  -webkit-position: absolute; /* Added -webkit prefix */
 }
 /* Mobile Device */
-@media screen and (min-width: 0px) and (max-width: 767px){
+@media screen and (min-width: 0px) and (max-width: 767px) {
   .neon {
     font-size: 36px;
   }
 
-  .datetime{
+  .datetime {
     font-size: 26px;
   }
   .infobubble {
@@ -75,8 +171,10 @@ body {
   h3 {
     font-size: 26px;
   }
+  footer #gif {
+    display: none;
+  }
 }
-
 /* Medium Device */
 @media screen and (min-width: 768px) {
   .neon {
@@ -85,7 +183,7 @@ body {
   h3 {
     font-size: 32px;
   }
-  .datetime{
+  .datetime {
     font-size: 32px;
   }
   .infobubble {
@@ -96,10 +194,10 @@ body {
 /* Large Device */
 @media screen and (min-width: 1024px) {
   .neon {
-    font-size:5vW;
+    font-size: 5vw;
   }
 
-  .datetime{
+  .datetime {
     font-size: 2.2vw;
   }
   .infobubble {
@@ -107,66 +205,3 @@ body {
   }
 }
 
-.flicker-slow{
-  animation: flicker 3s linear infinite;
-}
-
-.flicker-fast{
-  animation: flicker 1s linear infinite;
-}
-
-@keyframes flicker {
-	0%, 19.999%, 22%, 62.999%, 64%, 64.999%, 70%, 100% {
-    opacity: .99;
-
-	}
-	20%, 21.999%, 63%, 63.999%, 65%, 69.999% {
-		opacity: 0.4;
-	}
-}
-
-.numanuma {
-  grid-area: NEON;
-  z-index: -1;
-  font-family: 'Mr Dafoe';
-  font-size: 12vW;
-  font-weight: 100;
-  color: #aa00f0;
-  filter: drop-shadow(0 0 22px #ffffff);
-  line-height: 1;
-  transform: rotateZ(-10deg) translate(-200%, -50%);
-  transform-origin: center center;
-  opacity: 80%
-}
-
-.datetime{
-  grid-area: DTT;
-  font-family: 'Audiowide';
-}
-
-.infobubble{
-  grid-area: INF;
-  font-family: 'Audiowide';
-  font-weight: 50;
-  filter: drop-shadow(0 0 22px #ff00aa);
-  opacity: 80%
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-footer {
-  width:95%;
-  position:absolute;
-  bottom:0%;
-  left:5%;
-  clear: both;
-}
-
-footer #gif {
-  right: 0;
-  bottom: 0;
-  position: absolute;
-}
