--- a/reading.css
+++ b/reading.css
@@ -114,6 +114,10 @@ table {
   .header {
     font-size: 20px; /* Adjust the minimum font size for mobile devices */
   }
+  
+  footer {
+	visibility: hidden;
+}
 }
 
 /* Mid-sized devices */
