--- a/reading.css
+++ b/reading.css
@@ -17,13 +17,17 @@ table {
 }
 
 #background {
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   perspective: 800px;
   background-image: linear-gradient(to bottom, #0f0209, #23061d, #330531, #3e024b, #41056a, #520578, #640385, #770092, #9b0089, #b8007e, #ce1173, #e03168);
   z-index: -1;
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
 }
 
 #background-scroller {
@@ -78,12 +82,13 @@ table {
 
 .box {
   position: absolute;
-  top: 20%;
+  top: 5%;
   left: 20%;
   display: grid;
   grid-template:
     "TITLE"
     "CONTENT";
+  padding-bottom: 50px;
 }
 
 #title {
@@ -114,7 +119,7 @@ table {
   .header {
     font-size: 20px; /* Adjust the minimum font size for mobile devices */
   }
-  
+
   footer {
 	visibility: hidden;
 }
