--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
   perspective: 800px;
   overflow: hidden;
   background-image: linear-gradient(to bottom, #0f0209, #23061d, #330531, #3e024b, #41056a, #520578, #640385, #770092, #9b0089, #b8007e, #ce1173, #e03168);
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
 }
 
 #background-scroller {
