--- a/landingstyle.css
+++ b/landingstyle.css
@@ -9,8 +9,8 @@ body {
 }
 
 #background {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   perspective: 800px;
   background-image: linear-gradient(
     to bottom,
@@ -114,6 +114,7 @@ body {
 }
 
 .numanuma {
+  height: fit-content;
   grid-area: NEON;
   z-index: -1;
   font-family: "Mr Dafoe";
