--- a/landingstyle.css
+++ b/landingstyle.css
@@ -1,4 +1,3 @@
-
 body {
   background: black;
   color: white;
@@ -9,162 +8,157 @@ body {
   animation: textShadow 1.6s infinite;
   margin: 0;
 }
-#background::before {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-  z-index:-1;
-  background-size: 100% 6px, 9px 100%;
-  pointer-events: none;
-}
-#background::after {
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: rgba(18, 16, 16, 0.1);
-  opacity: 0;
-  z-index: 2;
-  pointer-events: none;
-  animation: flicker 0.15s infinite;
-}
+
 @keyframes textShadow {
   0% {
-    text-shadow: 0.4389924193300864px 0 1px rgba(0,30,255,0.5), -0.4389924193300864px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.4389924193300864px 0 1px rgba(0, 30, 255, 0.5),
+      -0.4389924193300864px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   5% {
-    text-shadow: 2.7928974010788217px 0 1px rgba(0,30,255,0.5), -2.7928974010788217px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 2.7928974010788217px 0 1px rgba(0, 30, 255, 0.5),
+      -2.7928974010788217px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   10% {
-    text-shadow: 0.02956275843481219px 0 1px rgba(0,30,255,0.5), -0.02956275843481219px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.02956275843481219px 0 1px rgba(0, 30, 255, 0.5),
+      -0.02956275843481219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   15% {
-    text-shadow: 0.40218538552878136px 0 1px rgba(0,30,255,0.5), -0.40218538552878136px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.40218538552878136px 0 1px rgba(0, 30, 255, 0.5),
+      -0.40218538552878136px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   20% {
-    text-shadow: 3.4794037899852017px 0 1px rgba(0,30,255,0.5), -3.4794037899852017px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 3.4794037899852017px 0 1px rgba(0, 30, 255, 0.5),
+      -3.4794037899852017px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   25% {
-    text-shadow: 1.6125630401149584px 0 1px rgba(0,30,255,0.5), -1.6125630401149584px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 1.6125630401149584px 0 1px rgba(0, 30, 255, 0.5),
+      -1.6125630401149584px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   30% {
-    text-shadow: 0.7015590085143956px 0 1px rgba(0,30,255,0.5), -0.7015590085143956px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.7015590085143956px 0 1px rgba(0, 30, 255, 0.5),
+      -0.7015590085143956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   35% {
-    text-shadow: 3.896914047650351px 0 1px rgba(0,30,255,0.5), -3.896914047650351px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 3.896914047650351px 0 1px rgba(0, 30, 255, 0.5),
+      -3.896914047650351px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   40% {
-    text-shadow: 3.870905614848819px 0 1px rgba(0,30,255,0.5), -3.870905614848819px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 3.870905614848819px 0 1px rgba(0, 30, 255, 0.5),
+      -3.870905614848819px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   45% {
-    text-shadow: 2.231056963361899px 0 1px rgba(0,30,255,0.5), -2.231056963361899px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 2.231056963361899px 0 1px rgba(0, 30, 255, 0.5),
+      -2.231056963361899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   50% {
-    text-shadow: 0.08084290417898504px 0 1px rgba(0,30,255,0.5), -0.08084290417898504px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.08084290417898504px 0 1px rgba(0, 30, 255, 0.5),
+      -0.08084290417898504px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   55% {
-    text-shadow: 2.3758461067427543px 0 1px rgba(0,30,255,0.5), -2.3758461067427543px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 2.3758461067427543px 0 1px rgba(0, 30, 255, 0.5),
+      -2.3758461067427543px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   60% {
-    text-shadow: 2.202193051050636px 0 1px rgba(0,30,255,0.5), -2.202193051050636px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 2.202193051050636px 0 1px rgba(0, 30, 255, 0.5),
+      -2.202193051050636px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   65% {
-    text-shadow: 2.8638780614874975px 0 1px rgba(0,30,255,0.5), -2.8638780614874975px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 2.8638780614874975px 0 1px rgba(0, 30, 255, 0.5),
+      -2.8638780614874975px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   70% {
-    text-shadow: 0.48874025155497314px 0 1px rgba(0,30,255,0.5), -0.48874025155497314px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.48874025155497314px 0 1px rgba(0, 30, 255, 0.5),
+      -0.48874025155497314px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   75% {
-    text-shadow: 1.8948491305757957px 0 1px rgba(0,30,255,0.5), -1.8948491305757957px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 1.8948491305757957px 0 1px rgba(0, 30, 255, 0.5),
+      -1.8948491305757957px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   80% {
-    text-shadow: 0.0833037308038857px 0 1px rgba(0,30,255,0.5), -0.0833037308038857px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.0833037308038857px 0 1px rgba(0, 30, 255, 0.5),
+      -0.0833037308038857px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   85% {
-    text-shadow: 0.09769827255241735px 0 1px rgba(0,30,255,0.5), -0.09769827255241735px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 0.09769827255241735px 0 1px rgba(0, 30, 255, 0.5),
+      -0.09769827255241735px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   90% {
-    text-shadow: 3.443339761481782px 0 1px rgba(0,30,255,0.5), -3.443339761481782px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 3.443339761481782px 0 1px rgba(0, 30, 255, 0.5),
+      -3.443339761481782px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   95% {
-    text-shadow: 2.1841838852799786px 0 1px rgba(0,30,255,0.5), -2.1841838852799786px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 2.1841838852799786px 0 1px rgba(0, 30, 255, 0.5),
+      -2.1841838852799786px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
   100% {
-    text-shadow: 2.6208764473832513px 0 1px rgba(0,30,255,0.5), -2.6208764473832513px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    text-shadow: 2.6208764473832513px 0 1px rgba(0, 30, 255, 0.5),
+      -2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
   }
 }
 
 @keyframes flicker {
   0% {
-  opacity: 0.27861;
+    opacity: 0.27861;
   }
   5% {
-  opacity: 0.34769;
+    opacity: 0.34769;
   }
   10% {
-  opacity: 0.23604;
+    opacity: 0.23604;
   }
   15% {
-  opacity: 0.90626;
+    opacity: 0.90626;
   }
   20% {
-  opacity: 0.18128;
+    opacity: 0.18128;
   }
   25% {
-  opacity: 0.83891;
+    opacity: 0.83891;
   }
   30% {
-  opacity: 0.65583;
+    opacity: 0.65583;
   }
   35% {
-  opacity: 0.67807;
+    opacity: 0.67807;
   }
   40% {
-  opacity: 0.26559;
+    opacity: 0.26559;
   }
   45% {
-  opacity: 0.84693;
+    opacity: 0.84693;
   }
   50% {
-  opacity: 0.96019;
+    opacity: 0.96019;
   }
   55% {
-  opacity: 0.08594;
+    opacity: 0.08594;
   }
   60% {
-  opacity: 0.20313;
+    opacity: 0.20313;
   }
   65% {
-  opacity: 0.71988;
+    opacity: 0.71988;
   }
   70% {
-  opacity: 0.53455;
+    opacity: 0.53455;
   }
   75% {
-  opacity: 0.37288;
+    opacity: 0.37288;
   }
   80% {
-  opacity: 0.71428;
+    opacity: 0.71428;
   }
   85% {
-  opacity: 0.70419;
+    opacity: 0.70419;
   }
   90% {
-  opacity: 0.7003;
+    opacity: 0.7003;
   }
   95% {
-  opacity: 0.36108;
+    opacity: 0.36108;
   }
   100% {
-  opacity: 0.24387;
+    opacity: 0.24387;
   }
 }
 #background {
@@ -175,24 +169,22 @@ body {
     to bottom,
     #0f0209,
     #23061d,
-    #330531,
-    #3e024b,
-    #41056a,
-    #520578,
-    #640385,
-    #770092,
-    #9b0089,
-    #b8007e,
-    #ce1173,
-    #e03168
+    #200533,
+    #3e028b,
+    #4105aa,
+    #5205b8,
+    #6403c5,
+    #7700d2,
+    #9b00c9
   );
   z-index: -1;
   overflow: hidden;
-  position:fixed;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 100px;
 }
 
 #background-scroller {
@@ -235,12 +227,12 @@ body {
 .neon {
   grid-area: SYNTH;
   font-family: "Monoton", cursive;
-  color: #ffd5ff;
+  color: #66eef7;
   font-weight: 400;
   letter-spacing: 8px;
-  text-shadow: 1px 0px 4px #ffd5ff, 2px 0px 4px #ffd5ff, 3px 0px 4px #ffd5ff,
-    2px 0px 3px #d42cca, 2px 3px 15px #d42cca, 2px 0px 15px, 5px 0px 125px,
-    20px 0vw 200px #d42cca, 40px 0vw 200px #d42cca;
+  text-shadow: 1px 0px 4px #5cb8bd, 2px 0px 4px #5cb8bd, 3px 0px 4px #5cb8bd,
+    2px 0px 3px #eab1ff, 2px 3px 15px #eab1ff, 2px 0px 15px, 5px 0px 125px,
+    20px 0vw 200px #eab1ff, 40px 0vw 200px #eab1ff;
 }
 
 .flicker-slow {
@@ -279,12 +271,12 @@ body {
   font-family: "Mr Dafoe";
   font-size: 12vw;
   font-weight: 100;
-  color: #aa00f0;
+  color: yellow;
   filter: drop-shadow(0 0 22px #ffffff);
   line-height: 1;
   transform: rotateZ(-10deg) translate(-200%, -50%);
   transform-origin: center center;
-  opacity: 80%;
+  opacity: 90%;
 }
 
 .datetime {
@@ -370,3 +362,56 @@ footer #gif {
   }
 }
 
+@keyframes rotateLeft {
+  0% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(10deg);
+  }
+}
+
+@keyframes rotateRight {
+  0% {
+    transform: rotate(-12deg);
+  }
+  50% {
+    transform: rotate(12deg);
+  }
+  100% {
+    transform: rotate(-12deg);
+  }
+}
+
+.triangle1 {
+  animation: rotateLeft 3s infinite;
+  will-change: transform;
+  position: fixed;
+  transform: rotate(30deg);
+  width: 30vw;
+}
+
+.triangle2 {
+  animation: rotateRight 3s infinite;
+  will-change: transform;
+  position: fixed;
+  transform: rotate-(30deg);
+  width: 30vw;
+}
+
+.triangle3 {
+  position: fixed;
+  width: 30vw;
+}
+
+.triangle-magic {
+  z-index: -1;
+  opacity: 80%;
+  filter: drop-shadow(0 0 22px #ffffff);
+  position: relative;
+  transform: translate(-260%, -100%) rotateZ(-60deg);
+  grid-area: NEON;
+}
