--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-
 body {
- // min-height: 100vh;
+  // min-height: 100vh;
   background: black;
   color: white;
   display: flex;
@@ -15,19 +14,33 @@ body {
   width: 100vw;
   perspective: 800px;
   overflow: hidden;
-  background-image: linear-gradient(to bottom, #0f0209, #23061d, #330531, #3e024b, #41056a, #520578, #640385, #770092, #9b0089, #b8007e, #ce1173, #e03168);
-  position:fixed;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
+  background-image: linear-gradient(
+    to bottom,
+    #0f0209,
+    #23061d,
+    #200533,
+    #3e028b,
+    #4105aa,
+    #5205b8,
+    #6403c5,
+    #7700d2,
+    #9b00c9
+  );
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 #background-scroller {
   background-size: 60px 60px;
-  background-image:
-    linear-gradient(to right, rgba(255, 255, 255, .15) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(255, 255, 255, .2) 1px, transparent 1px);
+  background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.15) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 1px, transparent 1px);
   height: inherit;
   transform: rotateX(40deg);
   transform-origin: top center;
@@ -41,7 +54,7 @@ body {
   }
 }
 
-.container{
+.container {
   position: absolute;
   top: 30%;
   left: 40%;
@@ -49,70 +62,82 @@ body {
   grid-template:
     ". . ."
     "SYNTH NEON SYNTH"
-    "DTT . ." ;
+    "DTT . .";
 }
-.box{
-position: absolute;
-top: 30%;
-left: 40%;
-display: grid;
-grid-template:
-  "TITLE"
-  "CONTENT";
+.box {
+  position: absolute;
+  top: 30%;
+  left: 40%;
+  display: grid;
+  grid-template:
+    "TITLE"
+    "CONTENT";
 }
-#title{
-	grid-area: TITLE;
+#title {
+  grid-area: TITLE;
 }
-#content{
-	grid-area: CONTENT;
+#content {
+  grid-area: CONTENT;
 }
-.neon{
+.neon {
   grid-area: SYNTH;
-  font-family: 'Monoton', cursive;
-  font-size:5vW;
-  color: #FFD5FF;
+  font-family: "Monoton", cursive;
+  font-size: 5vw;
+  color: #ffd5ff;
   transform: translate(-50%, -50%);
   font-weight: 400;
   letter-spacing: 8px;
-  text-shadow: 1px 0px 4px #FFD5FF, 2px 0px 4px #FFD5FF, 3px 0px 4px #FFD5FF, 2px 0px 3px #D42CCA, 2px 3px 15px #D42CCA, 2px 0px 15px, 5px 0px 125px, 20px 0vw 200px #D42CCA,40px 0vw 200px #D42CCA;
+  text-shadow: 1px 0px 4px #ffd5ff, 2px 0px 4px #ffd5ff, 3px 0px 4px #ffd5ff,
+    2px 0px 3px #d42cca, 2px 3px 15px #d42cca, 2px 0px 15px, 5px 0px 125px,
+    20px 0vw 200px #d42cca, 40px 0vw 200px #d42cca;
 }
 
-.flicker-slow{
+.flicker-slow {
   animation: flicker 3s linear infinite;
 }
 
-.flicker-fast{
+.flicker-fast {
   animation: flicker 1s linear infinite;
 }
 
 @keyframes flicker {
-	0%, 19.999%, 22%, 62.999%, 64%, 64.999%, 70%, 100% {
-		//text-shadow: none;
-    opacity: .99;
-
-	}
-	20%, 21.999%, 63%, 63.999%, 65%, 69.999% {
-		opacity: 0.4;
-	}
+  0%,
+  19.999%,
+  22%,
+  62.999%,
+  64%,
+  64.999%,
+  70%,
+  100% {
+    //text-shadow: none;
+    opacity: 0.99;
+  }
+  20%,
+  21.999%,
+  63%,
+  63.999%,
+  65%,
+  69.999% {
+    opacity: 0.4;
+  }
 }
 
 .numanuma {
   grid-area: NEON;
   z-index: 2;
-  font-family: 'Mr Dafoe';
-  font-size: 12vW;
+  font-family: "Mr Dafoe";
+  font-size: 12vw;
   font-weight: 100;
   color: #ff00f0;
   filter: drop-shadow(0 0 22px #ff00f5);
   line-height: 1;
   transform: rotateZ(10deg) translate(20%, -90%);
   transform-origin: center left;
-  opacity: 80%
+  opacity: 80%;
 }
 
-.datetime{
+.datetime {
   grid-area: DTT;
   font-size: 2vw;
-  transform: translate(-50%, 10%)
+  transform: translate(-50%, 10%);
 }
-
