--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   height: 100vh;
   width: 100vw;
   perspective: 800px;
+  -webkit-perspective: 800px;
   overflow: hidden;
   background-image: linear-gradient(
     to bottom,
