--- a/reading.css
+++ b/reading.css
@@ -42,6 +42,13 @@ table {
   bottom: 0;
 }
 
+/** Safari background hack */
+@media not all and (min-resolution: 0.001dpcm) {
+  #background {
+    overflow: initial;
+  }
+}
+
 #background-scroller {
   background-size: 150px 150px;
   background-image: linear-gradient(
