--- a/reading.css
+++ b/reading.css
@@ -241,3 +241,61 @@ a {
     width: 80%;
   }
 }
+
+.csscolumn {
+  -webkit-column-count: 3;  /* Chrome, Safari, Opera */
+  -moz-column-count: 3;     /* Firefox */
+  column-count: 3;
+}
+
+/* styling for this demo */
+.csscolumn {
+  width: 50%;
+}
+
+.csscolumn + .csscolumn {
+  margin-top: 10px;
+  padding-top: 10px;
+  border-top: 1px solid;
+}
+
+.flexyfill {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 70%;
+  flex-wrap: wrap;
+  background: #ffffffab;
+
+}
+
+.flexyfill > a {
+  padding: 5px;
+  text-align: center;
+}
+
+.filling {
+  justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.filling a {
+  width: 25%;
+  min-width: 200px;
+}
+
+.filling > a > img {
+  max-width: 95%;
+  min-width: 110px;
+  max-height: 300px;
+  height: auto;
+  object-fit: scale-down;
+  transform: translate(-50%,-50%);
+  position: relative;
+  top: 50%;
+  bottom: 50%;
+  left: 50%;
+}
